# android_external_Focal

./: Android.mk  Application.mk  Nemesis  README.md  gnustl.mk
XMPToolkit/: Android.mk
apsc/: Android.mk  AutoPanoSift.h  AutoPanoSift.h~  CMakeLists.txt  config.h  config.h.in.cmake  config.h~
apsc/APSCpp/ANN/: ANN.h  CMakeLists.txt
apsc/CMakeModules/: FindLibXml2.cmake  FindPANO13.cmake
boost-1_53/: Android.mk
celeste/: Android.mk  Main.cpp  NOTICE  svm.cpp
enblend/: AUTHORS  Android.mk  CMakeLists.txt  ConfigureChecks.cmake  Makefile.am  Makefile.scm  NEWS  README  TODO-3.x  VERSION  config.h  config.h.cmake  config.h~  configure.in
enblend/CMakeModules/: FindExiv2.cmake  FindGLEW.cmake  FindGLUT.cmake  FindGSL.cmake  FindJPEG.cmake  FindLCMS2.cmake  FindLibXMI.cmake  FindLibraryForCPU.cmake  FindLibraryWithDebug.cmake  FindOpenEXR.cmake  FindOpenGL.cmake  FindOpenMP.cmake  FindPANO13.cmake  FindPNG.cmake  FindTIFF.cmake  FindVIGRA.cmake  FindZLIB.cmake  HuginMacros.cmake
enblend/contrib/enfuse_droplet/: enfuse_droplet.bat  enfuse_droplet_360.bat  enfuse_droplet_readme.txt
enblend/doc/: CMakeLists.txt  CreateVersTexi.pl  Makefile.am  ReplaceValues.pl  authors.texi  auxmac.tex  auxmac.texi  bug-reports.texi  color-profiles.texi  config-edge.gp  config.gp  default.css  define2set.pl  docstrings  enblend.info  enblend.texi  enfuse.info  enfuse.texi  entropy-cutoff.gp.in  entropy.gp.in  exposure-cutoff.gp.in  external-mask-workflow.fig  external-masks.texi  fdl.texi  fig2txt.pl  filespec.texi  focus-stack-decision-tree.fig  gaussian.gp.in  helpful-programs.texi  html2xhtml  laplacian-of-gaussian.gp.in  local-analysis-window.fig  macros.cmake  makeinfo-4.13-docbook.sed  mask-template-characters.texi  photographic-workflow.fig  seam-generators.texi  seam-line-visualization.tif  sharp-edge.data  sharp-edge.gp.in  (+7 more)
enblend/include/: CMakeLists.txt  Makefile.am  glob.h
enblend/include/vigra_ext/: CMakeLists.txt  Makefile.am  cachedfileimage.hxx  fillpolygon.hxx  functoraccessor.hxx  rect2d.hxx  stdcachedfileimage.hxx  stride.hxx
enblend/m4/: ax_openmp.m4
enblend/src/: CMakeLists.txt  DefaultSig.pm  Makefile.am  Sig.pm  anneal.h  assemble.h  blend.h  bounds.h  common.h  enblend.1  enblend.cc  enblend.cc~  enblend.h  enfuse.1  enfuse.cc  enfuse.cc~  enfuse.h  error_message.cc  error_message.h  filenameparse.cc  filenameparse.h  filespec.cc  filespec.h  fixmath.h  gen_sig  global.h  gpu.br  gpu.cc  gpu.cpp  gpu.h  graphcut.h  mask.h  maskcommon.h  masktypedefs.h  mga.h  minimizer.h  muopt.h  nearest.h  numerictraits.h  openmp.h  (+9 more)
enblend/src/layer_selection/: Makefile.am  info.cc  info.h  layer_selection.cc  layer_selection.h  selector.cc  selector.h
enblend/src/win32helpers/: CMakeLists.txt  Makefile.am
enblend/test/: gigapixel_lowerright.cc  gigapixel_readback_bounds.cc  gigapixel_upperleft.cc
enblend/win32/: install.cmd
enblend/win32/msi/: enblend.warsetup
exiv2/: Android.mk  Android.mk~  Makefile  config.status  libtool
glib/: Android.mk  gmarshal.c
gsl/: Android.mk  Android.mk~
hugin/: Android.mk  Android.mk~  hugin_config.h~  (+1 more)
libpano13/: .cvsignore  .hgeol  .hgignore  AUTHORS  Android.mk  CMakeLists.txt  ChangeLog  ChangeLog.hg  ColourBrightness.c  ColourBrightness.h  LocalDefs.props  LocalDefs.vsprops  Makefile.am  NEWS  NOTICE  PTDialogs.c  PTDialogsStub.c  PTcommon.c  PTcommon.h  PaniniGeneral.c  PaniniGeneral.h  PanoTools.pbproj.tgz  README  README.linux  README.windows  TODO.org  Triangulate.c  ZComb.c  ZComb.h  adjust.c  adjust.h  bmp.c  bootstrap  configure.ac  correct.c  dump.c  dump.h  f2c.h  fftn.c  fftn.h  (+64 more)
libpano13/doc/: Makefile.am  Optimize.txt  PTblender.readme  PTmender.readme  developmentPolicy.txt  stitch.txt
libpano13/m4/: Makefile.am  ax_check_graphics.m4  ax_check_java.m4
libpano13/man/: CMakeLists.txt  Makefile.am  PTAInterpolate.1  PTAInterpolate.pod  PTblender.1  PTblender.pod  PTcrop.1  PTcrop.pod  PTinfo.1  PTinfo.pod  PTmasker.1  PTmasker.pod  PTmender.1  PTmender.pod  PToptimizer.1  PToptimizer.pod  PTroller.1  PTroller.pod  PTtiff2psd.1  PTtiff2psd.pod  PTtiffdump.1  PTtiffdump.pod  PTuncrop.1  PTuncrop.pod  panoinfo.1  panoinfo.pod
libpano13/tests/: CMakeLists.txt  ChangeLog  Makefile.am  README.TXT  compareImages.pl  panoAutomatePSDtest.pl  panoAutomateTest.pl  tiff2psdTest.bat
libpano13/tests/simpleStitch/: CMakeLists.txt  ChangeLog  Makefile.am  README.txt  simple.pto  simple.txt
libpano13/tests/simpleStitch/reference/: Makefile.am  psd.psd  psd_mask.psd  psd_no_mask.psd  tiff_deflate.tif  tiff_lzw.tif  tiff_m0000.tif  tiff_m0001.tif  tiff_m_cropped0000.tif  tiff_m_cropped0001.tif  tiff_m_uncropped0000.tif  tiff_m_uncropped0001.tif  tiff_mask0000.tif  tiff_mask0001.tif  tiff_none.tif
libpano13/tests/simpleTiff16/: 060520_3398.TIF  CMakeLists.txt  ChangeLog  Makefile.am  README.TXT  simple.txt  temp.txt
libpano13/tests/simpleTiff16/reference/: Makefile.am  psd.psd  psd_mask.psd  tiff_deflate.tif  tiff_lzw.tif  tiff_m0000.tif  tiff_m_cropped0000.tif  tiff_m_uncropped0000.tif  tiff_mask0000.tif  tiff_none.tif
libpano13/tests/simpleTiff2psd/: CMakeLists.txt
libpano13/tests/simpleTiff2psd/reference/: simpleStitch_crop_1_layer.psd  simpleStitch_crop_2_layer.psd  simpleStitch_uncrop_2_layer.psd
libpano13/tests/simpleTiff2psd/tests/: simpleStitch_uncrop_1_layer.psd  simpleTiff16-16-_uncrop_1_layer.psd  simpleTiff16-16-_uncrop_2_layer.psd
libpano13/tools/: .cvsignore  CMakeLists.txt  ChangeLog  Makefile.am  PTAInterpolate.c  PTAInterpolate.vcproj  PTAInterpolate.vcxproj  PTOptimizer.vcproj  PTOptimizer.vcxproj  PTainterpolate.rc  PTblender.c  PTblender.rc  PTblender.vcproj  PTblender.vcxproj  PTcrop.c  PTcrop.rc  PTcrop.vcproj  PTcrop.vcxproj  PTinfo.c  PTinfo.rc  PTinfo.vcproj  PTinfo.vcxproj  PTmasker.c  PTmasker.rc  PTmasker.vcproj  PTmasker.vcxproj  PTmender.c  PTmender.h  PTmender.rc  PTmender.vcproj  PTmender.vcxproj  PToptimizer.c  PToptimizer.rc  PTroller.c  PTroller.rc  PTroller.vcproj  PTroller.vcxproj  PTtiff2psd.c  PTtiff2psd.rc  PTtiff2psd.vcproj  (+12 more)
libpano13/tools/compat_win32/: dirent.h
(+118 files in other folders)
